# code_reviewer

./: .gitignore  pyproject.toml
code_reviewer/: cli.py  config.py
code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
code_reviewer/code_analysis/: bug_detector.py
code_reviewer/github_integration/: reader.py
